<resources>
    <!--Titles-->
    <string name="app_name">100ballov</string>
    <string name="application">100</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>
    <string name="title_contacts_frag">Контакты</string>
    <string name="title_about_us_frag">О нас</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--NavigationDrawer items-->
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Выйти</string>
    <string name="profile_item">Мой профиль</string>
    <string name="schedule_item">Расписание</string>
    <string name="books_item">Учебники</string>
    <string name="news_item">Новости</string>
    <string name="to_main">На главную</string>

    <!--Main page strings-->
    <string name="about_us">О нас</string>
    <string name="contacts">Контакты</string>
    <string name="schedule">Расписание</string>
    <string name="enroll">Записаться</string>


    <!--About us-->
    <string name="teacher1">Ivan</string>
    <string name="teacher2">Eva</string>
    <string name="edu">Адукацыя:</string>
    <string name="work_form">Форма працы:</string>
    <string name="classes">Класы: </string>
    <string name="comment">Каментар выкладчыка:</string>

    <!--Student's profile page strings-->
    <string name="my_schedule">Мое расписание</string>
    <string name="my_books">Мои учебники</string>
    <string name="my_tasks">Домашнее задание</string>

    <!--Hints and image descriptions-->
    <string name="image_description">teacher photo</string>
    <string name="stud_image_description">students photo</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_edu">Education</string>
    <string name="hint_comment">Comment</string>

    <!--Enrollment strings-->
    <string name="to_enroll">Чтобы записаться на курс,\nвведите свои контактные данные:</string>
    <string name="parent_enroll">ФИО одного из родителей:</string>
    <string name="parent_phone_enroll">Телефон одного из родителей:</string>
    <string name="email">E-mail для связи:</string>
    <string name="student_enroll">ФИО ученика:</string>
    <string name="student_phone_enroll">Телефон ученика:</string>
    <string name="class_enroll">Класс:</string>
    <string name="class4">4 класс</string>
    <string name="class6">6 класс</string>
    <string name="class7">7 класс</string>
    <string name="class8">8 класс</string>
    <string name="class9">9 класс</string>
    <string name="class10">10 класс</string>
    <string name="class11">11 класс (Подготовка в ЦТ)</string>
    <string name="new_enrollment">Новая заявка на обучение</string>
    <string name="new_enrollment_title">Новая заявка</string>
    <string name="enrollment_email">100ballov.application@gmail.com</string>
    <string name="enrollment_success">Ваша заявка отправлена. Наши специалисты свяжутся с вами в ближайшее время</string>

    <string-array name="class_list">
        <item>Выбрать</item>
        <item>4 класс</item>
        <item>6 класс</item>
        <item>7 класс</item>
        <item>8 класс</item>
        <item>9 класс</item>
        <item>10 класс</item>
        <item>11 класс(Подготовка в ЦТ)</item>
    </string-array>

    <string-array name="add_class_list">
        <item> </item>
        <item>4 класс</item>
        <item>6 класс</item>
        <item>7 класс</item>
        <item>8 класс</item>
        <item>9 класс</item>
        <item>10 класс</item>
        <item>11 класс</item>
    </string-array>

    <string-array name="choose_class">
        <item>выбрать класс</item>
        <item>4 класс</item>
        <item>6 класс</item>
        <item>7 класс</item>
        <item>8 класс</item>
        <item>9 класс</item>
        <item>10 класс</item>
        <item>11 класс(Подготовка в ЦТ)</item>
    </string-array>

    <string-array name="days">
        <item> </item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string name="enter_button">Вход</string>
    <string name="register_link">Регистрация</string>
    <string name="title_activity_login">Вход</string>
    <string name="email_login"> email</string>
    <string name="password_hint">пароль</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Проверьте правильность e-mail</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_fields_required">Все поля должны быть заполнены</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="class_s">Класс</string>
    <string name="enter">Войти</string>
    <string name="login"> логин</string>
    <string name="chat_title">Новости</string>
    <string name="choose_class">выберите класс</string>


    <!--CHAT STRINGS-->
    <string name="loading_text">Loading...</string>
    <string name="decline_button_text">Decline</string>
    <string name="accept_button_text">Accept</string>
    <string name="list_row_arrow_description">list_row_arrow</string>
    <string name="enroll_error">Ошибка отправки. Пожалуйста, попробуйте позже</string>
    <string name="send_news">send news</string>
    <string name="confirm_exit">Нажмите Назад для выхода</string>
    <string name="student_tasks">Домашка</string>
    <string name="login_error">Ошибка авторизации. Логин или пароль неверный.</string>
    <string name="no_task_toast">Домашние задания недоступны. Попробуйте позже или обратитесь к вашему преподавателю.</string>
    <string name="books_fragment_title">Учебники</string>


</resources>
