<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_item" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_books"
            android:title="@string/books_item" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_new_releases"
            android:title="@string/news_item" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contacts" />
        <item  android:id="@+id/nav_main"
            android:icon="@drawable/ic_home"
            android:title="@string/to_main"
            android:checked="false"/>
    </group>


</menu>
