<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <import type="java.lang.String"/>
        <import type="com.example.studying.a100ballovapplication.enroll.EnrollFragmentViewModel.STATE"/>
        <variable
            name="view"
            type="com.example.studying.a100ballovapplication.enroll.EnrollFragmentViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>
            <!--android:visibility="@{view.state == STATE.PROGRESS ? View.VISIBLE : View.GONE}"/>-->


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/to_enroll"
                style="@style/BaseHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_enroll"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/parent_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/parent_enroll" />
            <EditText
                android:labelFor="@id/parent_enroll"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/parent_phone_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/parent_phone_enroll" />

            <EditText
                android:labelFor="@+id/parent_phone_enroll"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/email_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="textWebEmailAddress"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/student_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/student_enroll" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor"/>

            <TextView
                android:id="@+id/student_phone_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/student_phone_enroll" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:inputType="phone"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/class_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/class_enroll" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/class_list">
            </Spinner>

            <Button
                style="@style/BaseButton"
                android:text="@string/enroll"
                android:id="@+id/enroll_button"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

        </TableLayout>

    </FrameLayout>
    </ScrollView>
</layout>