<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/enter_button"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/icons">

        <EditText
            android:id="@+id/enter_login"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:hint="@string/email_login"
            android:textColor="@color/secondary_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="136dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#f4f3f3"/>
        <EditText
            android:id="@+id/enter_password"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:hint="@string/password_hint"
            android:textColor="@color/secondary_text"
            android:inputType="textPassword"
            android:maxLength="16"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/enter_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="#f4f3f3"
            android:shadowColor="@color/divider"/>

        <Button
            style="@style/BaseButton"
            android:text="@string/enter"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/enter_button"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/enter_password" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/enter_button"
            app:layout_constraintHorizontal_bias="0.498"
            android:visibility="gone"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>