<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <import type="com.example.studying.a100ballovapplication.about_us.FragmentViewModel.STATE"/>
        <variable
            name="view"
            type="com.example.studying.a100ballovapplication.about_us.FragmentViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="25dp"
                android:visibility="@{view.state == STATE.PROGRESS ? View.VISIBLE : View.GONE}"/>

            <android.support.constraint.ConstraintLayout
                style="@style/BaseText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{view.state == STATE.DATA ? View.VISIBLE : View.GONE}">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:src="@{view.imageUrl}"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/image_description"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{view.surname}"
                    android:textColor="@color/secondary_text"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:hint="@string/hint_surname"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    app:layout_constraintLeft_toRightOf="@+id/imageView2"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{view.name}"
                    android:textColor="@color/secondary_text"
                    android:textSize="21sp"
                    android:hint="@string/hint_name"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintVertical_bias="0.504"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/edu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/imageView2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/editText5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{view.education}"
                    android:textColor="@color/secondary_text"
                    android:hint="@string/hint_edu"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@id/edu"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp" />

                <TextView
                    android:id="@+id/additional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{view.additional}"
                    android:textColor="@color/secondary_text"
                    android:hint="additional"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText5"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:id="@+id/work_form"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/work_form"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/additional"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/additional"/>

                <TextView
                    android:id="@+id/lessontype"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{view.lessontype}"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintLeft_toRightOf="@id/work_form"
                    app:layout_constraintBottom_toBottomOf="@id/work_form"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginEnd="30dp" />

                <TextView
                    android:id="@+id/classes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/classes"
                    style="@style/BaseHeader"
                    app:layout_constraintLeft_toLeftOf="@+id/additional"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/lessontype"/>

                <TextView
                    android:id="@+id/classes_n"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{view.classes}"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintLeft_toRightOf="@id/classes"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    app:layout_constraintBottom_toBottomOf="@id/classes"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginEnd="30dp" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/additional"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/classes" />

                <TextView
                    android:id="@+id/editText6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{view.comment}"
                    android:textAlignment="gravity"
                    android:textColor="@color/secondary_text"
                    android:hint="@string/hint_comment"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/comment"
                    app:layout_constraintLeft_toLeftOf="@+id/comment"
                    app:layout_constraintRight_toRightOf="@+id/editText3" />

            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </ScrollView>
</layout>