<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
        <variable
            name="viewModel"
            type="com.example.studying.a100ballovapplication.registration.RegistrationViewModel"/>
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_reg"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:title="@string/register_link"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/icons">

            <EditText
                android:id="@+id/login_login"
                android:layout_width="304dp"
                android:layout_height="45dp"
                android:hint="@string/login"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                android:background="#f4f3f3"/>
            <EditText
                android:id="@+id/enter_login"
                android:layout_width="304dp"
                android:layout_height="45dp"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/login_login"
                android:layout_marginTop="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="#f4f3f3" />
            <EditText
                android:id="@+id/enter_password"
                android:layout_width="304dp"
                android:layout_height="45dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/enter_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="#f4f3f3"/>

            <Button
                style="@style/BaseButton"
                android:layout_width="250dp"
                android:text="@string/register_link"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/register_button"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/enter_password" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>